# PySide6-Framework

./: README.md  pyproject.toml  pyside6_framework.sql  remote_model_server.py
app/: config.py  main.py
app/db/: base.py  models.py  seed.py
app/services/: auth.py  casbin_enforcer.py  modelService.py  modelStorageService.py  rbac_model.conf  user_manager.py
app/services/system/: systemMenuService.py  systemPermissionService.py  systemUserService.py
app/ui/: login_window.py  main_window.py
app/ui/pages/: placeholder_page.py
app/ui/pages/algorithm/: algorithmPage.py
app/ui/pages/component/: componentPage.py
app/ui/pages/home/: homePage.py
app/ui/pages/model/: modelPage.py
app/ui/pages/system/: systemMenuPage.py  systemPermissionPage.py  systemUserPage.py
app/ui/utils/: custonDialog.py  signals.py
